--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -261,13 +261,15 @@
     {{ 'style.css' | asset_url | stylesheet_tag }}
     <link rel="stylesheet" href="{{ 'style.css' | asset_url }}" media="print" onload="this.media='all'">
 
-    <link rel="stylesheet" href="{{ 'fonts.sofia.pro.css' | asset_url }}" />
-    <link rel="stylesheet" href="{{ 'fonts.pt-serif.css' | asset_url }}" />
+    
 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+
+    
+    {% comment %} {{ 'fonts.pt-serif.css' | asset_url |  stylesheet_tag |  file_url }} {% endcomment %}
 
     {%- if settings.cart_type == 'drawer' -%}
       {{ 'component-cart-drawer.css' | asset_url | stylesheet_tag }}
